# meeting-recorder-core

./: .gitignore  Cargo.toml  NOTICE  README.md
crates/aec/: Cargo.toml
crates/aec/src/: lib.rs
crates/audio-actual/: Cargo.toml
crates/audio-actual/examples/: capture_demo.rs
crates/audio-utils/: Cargo.toml
crates/audio-utils/examples/: resample_demo.rs
crates/resampler/: Cargo.toml
